--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
             The architectural style of Thanh Chua Pagoda is a reflection of Vietnam’s traditional design, with a combination of wood and stone. The structure is built with high pillars and intricately designed roofs, each representing important aspects of Buddhist symbolism. The pagoda’s main hall houses a large Buddha statue, surrounded by smaller representations of Bodhisattvas.
         </p>
         <p>
-            Preservation efforts have been undertaken to maintain the integrity of the temple, especially after significant historical events like wars. The combination of ancient artistry and modern preservation techniques makes Thánh Chúa Pagoda not only a place of worship but also a cultural treasure.
+            Preservation efforts have been undertaken to maintain the integrity of the temple, especially after significant historical events like wars. The combination of ancient artistry and modern preservation techniques makes Thanh Chua Pagoda not only a place of worship but also a cultural treasure.
         </p>
     </article>
 
